# ROCm-bench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
rocm_bench/: __init__.py  __main__.py  logging_config.yaml
rocm_bench/cli/: __main__.py  app.py  common_options.py  errors.py  progress.py
rocm_bench/cli/commands/: __init__.py  run.py  status.py
rocm_bench/core/: config.py  services.py
rocm_bench/utils/: helpers.py
scripts/: clean_codebase_sorted.sh
tests/cli/: test_app.py
tests/core/: test_services.py
tests/utils/: test_helpers.py
