[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocm-bench"
version = "0.1.0"
description = "Typer CLI that samples AMD GPU usage with pyamdgpuinfo while running any external command; writes JSON benchmarks."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "elvee"}]

dependencies = [
  "typer>=0.12.3",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
gpu = ["pyamdgpuinfo>=2.1.1"]

[project.scripts]
rocm-bench = "rocm_bench.cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["rocm_bench"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["rocm_bench"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
